welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:25: error: not found: value faireV
  	faireV();
        ^